! fixed company credits (all four methods have been broken due to site changes)
* removed some garbage preceding the storyline returned by imdb::storyline()
+ imdbsearch::results() got additional parameters so results can be better filtered. Also added some safeguard for movies having a number before the year, e.g. "Safe (I) (2012)", to prevent empty years

v2.1.6 (06.02.2012)
-------------------
! bunch of IMDB changes broke things again: fixed imdb::votes(), imdb::movietype(), imdb::country(), imdb::genres(), imdb::mpaa_reason()
! same reason: fixed imdb::thumbphoto() -- and thus all dependent photo methods resolve again
! same reason, more fixes: imdb::keywords()
! same reason, fixed imdb::seasons() -- which implicitly fixed the depending imdb::episodes()
! four more: fixed imdb::is_serial() and imdb::get_episode_details() plus imdb::comment() and imdb::comment_split() due to IMDB site changes

v2.1.5 (06.12.2012)
-------------------
! fixed "undefined index" error in imdb::episodes()
! imdbsearch, imdbperson: site changes completely broke search
+ imdbperson: added caching of search result page
! imdb::is_serial() and imdb::get_episode_details() were also broken again

v2.1.4 (20.09.2012)
-------------------
! imdb::movietype() could no longer distinguish between TV Movie and TV Serie (site changes)
! imdb::is_serial() invalidated by site changes
! imdb::movieconnection() was broken due to site changes
! imdb_person::born() and imdb_person::died() suddenly missed day and month (site change; thanks to GeorgeFive for the fix!)
* test suite needed a minor update: our example "uncompleted" movie was completed meanwhile, so the test erraneously reported failure
+ imdb::trailers() was incomplete. Thanks to george (ticket:286) it now should fetch more, and I also added the possibility to decide whether to restrict trailers to on-site ones
* imdb::plotoutline(): removing extra HTML tags from around the storyline

v2.1.3 (15.04.2012)
-------------------