@@ -14,6 +14,7 @@ v2.1.7
 ! fixed company credits (all four methods have been broken due to site changes)
 * removed some garbage preceding the storyline returned by imdb::storyline()
 + imdbsearch::results() got additional parameters so results can be better filtered. Also added some safeguard for movies having a number before the year, e.g. "Safe (I) (2012)", to prevent empty years
+! fixing imdb::mainPictures() bigsrc
 
 v2.1.6 (06.02.2012)
 -------------------
